--- a/.github/workflows/Build ROM for Houji.yml
+++ b/.github/workflows/Build ROM for Houji.yml
@@ -1,4 +1,4 @@
-﻿name: Build ROM for Houji
+﻿name: Build ROM for Vermeer
 on:
   workflow_dispatch:
     inputs:
@@ -9,7 +9,7 @@ on:
       VENDOR_URL:
         description: "底包下载地址"
         required: true
-        default: 'https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/OS1.0.36.0.UNCCNXM/miui_HOUJI_OS1.0.36.0.UNCCNXM_54ab2de231_14.0.zip'
+        default: 'https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/OS1.0.36.0.UNCCNXM/miui_VERMEER_OS1.0.36.0.UNCCNXM_54ab2de231_14.0.zip'
 
 jobs:
   build:
@@ -47,12 +47,12 @@ jobs:
           allowUpdates: true
           artifactErrorsFailBuild: true
       - name: 上传到 Oracle S3
-        if: github.repository == 'YuKongA/Action_Build_Houji_ROM'
+        if: github.repository == 'YuKongA/Action_Build_Vermeer_ROM'
         run: |
           sudo -v ; curl https://rclone.org/install.sh | sudo bash
           mkdir -p ~/.config/rclone/
           echo ${{ secrets.confbase64 }} > base64.txt
           base64 --decode base64.txt > ~/.config/rclone/rclone.conf
-          rclone delete kr:/public-bucket/houji
-          rclone mkdir kr:/public-bucket/houji
-          rclone copy -P "$GITHUB_WORKSPACE"/zip/${{ env.rom_name }} kr:/public-bucket/houji
+          rclone delete kr:/public-bucket/vermeer
+          rclone mkdir kr:/public-bucket/vermeer
+          rclone copy -P "$GITHUB_WORKSPACE"/zip/${{ env.rom_name }} kr:/public-bucket/vermeer
