--- a/.github/workflows/Build ROM for Vermeer.yml
+++ b/.github/workflows/Build ROM for Vermeer.yml
@@ -9,7 +9,7 @@ on:
       VENDOR_URL:
         description: "底包下载地址"
         required: true
-        default: 'https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/OS1.0.36.0.UNCCNXM/miui_VERMEER_OS1.0.36.0.UNCCNXM_54ab2de231_14.0.zip'
+        default: 'https://bkt-sgp-miui-ota-update-alisgp.oss-ap-southeast-1.aliyuncs.com/OS1.0.15.0.UNKCNXM/miui_VERMEER_OS1.0.15.0.UNKCNXM_2100d3fc37_14.0.zip'
 
 jobs:
   build:
